k8s/base/networkpolicy-postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-ingress
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api

        - podSelector:
            matchLabels:
              app: postgres-exporter

        - podSelector:
            matchLabels:
              app: postgres-backup

        - podSelector:
            matchLabels:
              app: postgres-restore

      ports:
        - protocol: TCP
          port: 5432
